--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky"
+  },
+  "lint-staged": {
+    "*": "eslint"
   },
   "dependencies": {
     "react": "^18.2.0",
