added config for lint staged

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "vite build",
     "lint": "eslint . --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prepare": "husky",
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*": "eslint"
+    "*": "eslint --fix"
   },
   "dependencies": {
     "react": "^18.2.0",
