--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "eslint . --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "format": "npx dprint fmt"
   },
   "lint-staged": {
-    "*": "eslint --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "dprint fmt",
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -38,6 +42,7 @@
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "dprint": "^0.45.1"
   }
 }
